--- a/staff/aurora-perez/precourse/calculator html/index.css
+++ b/staff/aurora-perez/precourse/calculator html/index.css
@@ -4,7 +4,7 @@
     text-align: center;
     font-family: Arial;
     font-size: 1.5em;
-    table-layout:fixed
+    table-layout:fixed;
 }
 .table .result {
     text-align: right;
@@ -12,12 +12,12 @@
     color: white;
     padding-right: 20px;
     font-size: 1.7em;
-    table-layout:fixed
+    table-layout:fixed;
 }
 
 .table{
     width: 350px;
-    height: 500px
+    height: 500px;
 }
 
 .table1{
@@ -35,7 +35,7 @@
     color: rgb(32, 32, 32);
     text-align: left;
     padding-left: 5px;
-    table-layout:fixed
+    table-layout:fixed;
 }
 
 .table1:hover, .table2:hover, .table3:hover {
