--- a/staff/dario-fernandez/layouts/ugly-table.html
+++ b/staff/dario-fernandez/layouts/ugly-table.html
@@ -15,23 +15,29 @@
             width: 100%;
             background-color: #red;
         }
+        td[colspan] {
+            height: 20%;
+        }
+        .side {
+            width: 20%;
+        }
     </style>
 </head>
 <body>
     <table>
         <tr>
-            <td colspan="3">
+            <td colspan="3" >
                 <header>Header</header>
-            </td rowspan=>
+            </td>
         </tr>
         <tr>
-            <td>
+            <td class="side">
                 <nav>Nav</nav>
             </td>
             <td>
                 <main>Main</main>
-            </td>
-            <td>
+            </tdcolspan="2">
+            <td class="side">
                 <aside>Aside</aside>
             </td>
         </tr>
