change bgcolors and marginsf

--- a/staff/dario-fernandez/layouts/float.html
+++ b/staff/dario-fernandez/layouts/float.html
@@ -1,18 +1,23 @@
 <html>
 <head>
     <style>
+        * {
+            margin: 0;
+        }
         *:not(body) {
             border: 1px solid black;
             
         }
         header {
             height: 20%;
+            background-color: red;
         }
         nav {
             float: left;
             width: 25%;
             height: 60%;
             box-sizing: border-box;
+            background-color: blue;
 
         }
         main {
@@ -20,15 +25,18 @@
             width: 50%;
             box-sizing: border-box;
             height: 60%;
+            background-color: green;
         }
         aside {
             float: right;
             width: 25%;
             box-sizing: border-box;
             height: 60%;
+            background-color: yellow;
         }
         footer {
             height: 20%;
+            background-color: purple;
         }
     </style>
 </head>
