--- a/staff/alex-park/layouts/flex.html
+++ b/staff/alex-park/layouts/flex.html
@@ -11,58 +11,80 @@
             padding: 0;
         }
 
-        body {
-            background-color: gray;
-            box-sizing: border-box;
-            width: 100%;
-            height: 100%;
-        }
-
         .flex-container {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            width: 100%;
-            height: 100%;
+            box-sizing: border-box;
+            height: 100vh;
         }
 
-        .flex-container > header {
-            width: 100%;
-            height: 10vh;
-        }
-
-        .flex-container > nav, .flex-container > aside {
-            width: 20%;
-        }
-
-        .flex-container > main {
-            width: 60%;
-        }
-
-        .flex-container > footer {
-            width: 100%;
-        }
 
         header {
             background-color: green;
+            height: 10%;
         }
 
         nav, aside {
+            height: 10%;
+        }
+
+        nav {
             background-color: rgb(59, 59, 59);
+        }
+
+        aside {
+            background-color: rgb(145, 145, 145);
         }
 
         main {
             background-color: yellow;
+            height: 65%;
         }
 
         footer {
             background-color: red;
-            height: 10vh;
+            height: 5%;
         }
 
-        nav, main, aside {
-            height: 80vh;
+        @media only screen and (min-width: 600px) {
+            .flex-container {
+                display: flex;
+                flex-wrap: wrap;
+            }
+
+            header, nav, footer {
+                width: 100%;
+            }
+
+            main, aside {
+                height: 75%;
+            }
+
+            main {
+                width: 80%;
+            }
+
+            aside {
+                width: 20%;
+            }
         }
+
+        @media only screen and (min-width: 1028px) {
+            header, footer {
+                width: 100%;
+            }
+
+            nav, aside {
+                width: 15%;
+            }
+
+            main {
+                width: 70%;
+            }
+
+            main, nav, aside {
+                height: 85%;
+            }
+        }
+
     </style>
 </head>
 <body>
