--- a/staff/alex-park/layouts/float.html
+++ b/staff/alex-park/layouts/float.html
@@ -15,54 +15,99 @@
 
     body {
         margin: 0;
-        width: 100%;
         box-sizing: border-box;
         height: 100vh;
     }
 
-
-    /* header, main, nav, aside, footer {
-        border: 1px solid black;
-    } */
-
     header {
-        text-align: left;
-        height: 10%;
         background-color: red;
     }
 
     .maincontent {
-        /* display: block; */
         height: 80%;
-        width: 100%;
-        
-    }
-
-    main {
-        width: 60%;
-        float:left;
-        background-color: blue;
-        height: 100%;
     }
 
     nav {
-        float: left;
-        width: 20%;
         background-color: yellow;
-        height: 100%;
-    }
-
-    aside {
-        float: left;
-        width: 20%;
-        height: 100%;
-        background-color: green;
     }
 
     footer {
+        background-color: violet;
         height: 10%;
-        background-color: forestgreen
     }
+
+    header, nav, aside {
+        height: 10%;
+    }
+
+    main {
+        background-color: blue;
+        height: 80%;
+    }
+
+    aside {
+        background-color: orange;
+    }
+
+    @media only screen and (min-width: 600px) {
+        main {
+            float: left;
+            width: 80%;
+        }
+
+        aside {
+            float: left;
+            width: 20%;
+        }
+
+        main, aside {
+            height: 90%;
+        }
+    }
+
+    @media only screen and (min-width: 1028px) {
+        header {
+            text-align: left;
+            height: 10%;
+
+        }
+        
+        main {
+            width: 70%;
+            float:left;
+
+        }
+
+        nav {
+            float: left;
+            width: 15%;
+
+        }
+
+        aside {
+            float: left;
+            width: 15%;
+        }
+
+        nav, main, aside {
+            height: 100%;
+        }
+
+        footer {
+            height: 10%;
+
+        }
+    }
+
+    
 </style>
-<body><header>header</header><div class="maincontent"><nav>nav</nav><main>main</main><aside>aside</aside></div><footer>footer</footer></body>
+<body>
+    <header>header</header>
+    <div class="maincontent">
+        <nav>nav</nav>
+        <main>main</main>
+        <aside>aside</aside>
+    </div>
+    <footer>footer</footer>
+</body>
 </html>
