--- a/staff/ramon-palao/layouts/flex.html
+++ b/staff/ramon-palao/layouts/flex.html
@@ -12,14 +12,17 @@
     <div class="head">HEADER</div>
     <div class="center">
         <div class="nav">NAV</div>
-        <div class="main">MAIN</div>
-        <div class="aside">ASIDE</div>
+        <div class="tablet">
+            <div class="main">MAIN</div>
+            <div class="aside">ASIDE</div>
+        </div>
     </div>
     <div class="footer">FOOTER</div>
     <style>
         * {
             margin: 0;
             box-sizing: border-box;
+            text-align: center;
         }
 
         /*
@@ -79,42 +82,52 @@
         .head {
             border: 1px solid black;
             height: 10vh;
+            padding: 3vh 0;
         }
 
         .nav,
         .aside {
             border: 1px solid black;
             width: 100%;
-            height: 80vh;
+            height: 20vh;
+            padding: 8vh 0;
         }
 
         .main {
             border: 1px solid black;
             width: 100%;
             height: 80vh;
+            padding: 35vh 0;
         }
 
         .footer {
             border: 1px solid black;
             height: 10vh;
+            padding: 3vh 0;
         }
 
-        div {
+        /*div {
             display: flex;
             justify-content: center;
             align-items: center;
             text-align: center;
-        }
+        }*/
 
         @media only screen and (min-width: 768px) {
 
-            .main,
-            .aside {
+            .tablet {
                 display: flex;
                 flex-direction: row;
                 width: 100%;
             }
-
+            .main{
+                width: 75%;
+            }
+            .aside{
+                width: 25%;
+                height: 80vh;
+                padding: 35vh 0;
+            }
             .nav {
                 width: 100%;
             }
@@ -125,8 +138,12 @@
                 display: flex;
                 flex-direction: row;
             }
+            .nav {
+                width: 20%;
+                height: 80vh;
+                padding: 35vh 0;
+            }
 
-            .nav,
             .aside {
                 width: 20%;
             }
