--- a/staff/victori-murillo/layouts/float.html
+++ b/staff/victori-murillo/layouts/float.html
@@ -15,33 +15,24 @@
       margin: 0 auto;
       text-align: center;
     }
-
-    header,
-    nav,
-    main,
-    aside,
-    footer {
+    
+    body > * {
       border: 1px solid blue;
       margin: 0 auto;
     }
 
-    header,
-    footer {
+    body :nth-child(1), body :nth-child(5) {
       height: 20vh;
     }
 
-    nav,
-    main,
-    aside {
+    body :nth-child(n+2):nth-child(-n+4) {
       display: block;
       height: 20vh;
     }
 
     @media only screen and (min-width: 500px) {
 
-      nav,
-      main,
-      aside {
+      body :nth-child(n+2):nth-child(-n+4) {
         display: inline-block;
         width: calc(100vw/3);
         height: 60vh;
