--- a/staff/ramon-palao/layouts/flex.html
+++ b/staff/ramon-palao/layouts/flex.html
@@ -5,75 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-
-<body>
-    <div class="head">HEADER</div>
-    <div class="center">
-        <div class="nav">NAV</div>
-        <div class="tablet">
-            <div class="main">MAIN</div>
-            <div class="aside">ASIDE</div>
-        </div>
-    </div>
-    <div class="footer">FOOTER</div>
+    <title>Flex</title>
     <style>
         * {
             margin: 0;
             box-sizing: border-box;
             text-align: center;
         }
-
-        /*
-        body{
-            display: flex;
-            flex-direction: column;
-        }
-        .center{
-            display: flex;
-            flex-direction: row;
-        }
-        .head{
-            border: 2px solid black;
-            height: 10vh;
-        }
-        .nav, .aside{
-            border: 2px solid black;
-            width: 20%;
-            height: 80vh;
-        }
-        .main{
-            border: 2px solid black;
-            width: 60%;
-            height: 80vh;
-        }
-        .footer{
-            border: 2px solid black;
-            height: 10vh;
-        }
-        div{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-        @media only screen and (max-width: 600px){
-            .center{
-                display: flex;
-                flex-direction: column;
-            }
-            .nav, .main, .aside{
-                width: 100%;
-            }
-        }
-        @media only screen and (max-width: 768px){
-            .center{
-                display: flex;
-                flex-direction: column;
-            }
-        }
-        */
+        
         .center {
             display: flex;
             flex-direction: column;
@@ -106,13 +45,6 @@
             padding: 3vh 0;
         }
 
-        /*div {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }*/
-
         @media only screen and (min-width: 768px) {
 
             .tablet {
@@ -122,11 +54,13 @@
             }
             .main{
                 width: 75%;
+                height: 60vh;
+                padding: 25vh 0;
             }
             .aside{
                 width: 25%;
-                height: 80vh;
-                padding: 35vh 0;
+                height: 60vh;
+                padding: 25vh 0;
             }
             .nav {
                 width: 100%;
@@ -138,21 +72,35 @@
                 display: flex;
                 flex-direction: row;
             }
-            .nav {
-                width: 20%;
+            .nav, .aside {
+                width: 35%;
                 height: 80vh;
                 padding: 35vh 0;
             }
-
-            .aside {
-                width: 20%;
+            .tab{
+                height: 80vh;
             }
 
             .main {
-                width: 60%;
+                width: 70%;
+                height: 80vh 0;
+                padding: 35vh 0;
             }
         }
     </style>
+</head>
+
+<body>
+    <header class="head">HEADER</header>
+    <div class="center">
+        <nav class="nav tab">NAV</nav>
+        <div class="tablet">
+            <main class="main tab">MAIN</main>
+            <aside class="aside tab">ASIDE</aside>
+        </div>
+    </div>
+    <footer class="footer">FOOTER</footer>
+    
 </body>
 
 </html>
