--- a/staff/ramon-palao/layouts/float.html
+++ b/staff/ramon-palao/layouts/float.html
@@ -4,29 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <div class="head">HEADING</div>
-    <div class="nav">NAV</div>
-    <div class="main">MAIN</div>
-    <div class="aside">ASIDE</div>
-    <div class="footer">FOOTER</div>
+    <title>Float</title>
     <style>
         *{
             margin: 0;
             box-sizing: border-box;
         }
-        body{
-            margin: 5px;
-        }
-        div{
-            border: 2px solid black;
+        .bord{
+            border: 1px solid black;
             text-align: center;
         }
         .nav, .aside{
             width: 20%;
-            height: 70vh;
+            height: 80vh;
             float: left;
             padding: 30vh 0;
         }
@@ -43,11 +33,19 @@
         }
         .main{
             width: 60%;
-            height: 70vh;
+            height: 80vh;
             padding: 30vh;
             float: left;
         }
 
     </style>
+</head>
+<body>
+    <header class="head bord">HEADER</header>
+    <nav class="nav bord">NAV</nav>
+    <main class="main bord">MAIN</main>
+    <aside class="aside bord">ASIDE</aside>
+    <footer class="footer bord">FOOTER</footer>
+    
 </body>
 </html>
