--- a/staff/dario-fernandez/layouts/float.html
+++ b/staff/dario-fernandez/layouts/float.html
@@ -4,47 +4,70 @@
         * {
             margin: 0;
         }
-        *:not(body) {
-            border: 1px solid black;
-            
-        }
         header {
-            height: 20%;
+            height: 15%;
             background-color: red;
         }
         nav {
-            float: left;
-            width: 25%;
-            height: 60%;
-            box-sizing: border-box;
+            height: 15%;
             background-color: blue;
-
         }
         main {
-            display: inline-block;
-            width: 50%;
-            box-sizing: border-box;
-            height: 60%;
+            height: 40%;
             background-color: green;
         }
         aside {
-            float: right;
-            width: 25%;
-            box-sizing: border-box;
-            height: 60%;
+            height: 15%;
             background-color: yellow;
         }
         footer {
-            height: 20%;
+            height: 15%;
             background-color: purple;
+        }
+        @media screen and (min-width: 760px){
+            header {
+                height: 20%;
+            }
+            nav {
+                height: 15%;
+            }
+            main {
+                display: inline-block;
+                width: 70%;
+                height: 45%;
+
+            }
+            aside {
+                float: right;
+                width: 30%;
+                height: 45%;
+            }
+            footer {
+                height: 20%;
+            }
+        }    
+        @media screen and (min-width: 1024px) {
+            nav {
+                float: left;
+                width: 25%;
+                height: 60%;
+            }
+            main {
+                width: 50%;
+                height: 60%;
+            }
+            aside {
+                width: 25%;
+                height: 60%;
+            }
         }
     </style>
 </head>
 <body>
     <header>Header</header>
     <nav>Nav</nav>
-    <aside>Aside</aside>
     <main>Main</main>
+    <aside>Aside</aside>
     <footer>Footer</footer>
 </body>
 </html>
