--- a/staff/dario-fernandez/layouts/grid.html
+++ b/staff/dario-fernandez/layouts/grid.html
@@ -1,39 +1,92 @@
 <html>
+
 <head>
     <style>
-        *{
+        * {
             margin: 0;
         }
+
         .grid_container {
             height: 100vh;
             display: grid;
-            grid-template: 1fr 3fr 1fr / 1fr 2fr 1fr;
+            grid-template: 1fr 1fr 3fr 1fr 1fr / 1fr;
         }
+
         header {
             background-color: red;
-            grid-column: 1 / 4;
         }
+
         nav {
             background-color: blue;
-            grid-row: 2 / 3;
-            grid-column: 1 / 2;
         }
+
         main {
             background-color: green;
-            grid-row: 2 / 3;
-            grid-column: 2 / 3;
         }
+
         aside {
             background-color: yellow;
-            grid-row: 2 / 3;
-            grid-column: 3 / 4;
         }
+
         footer {
             background-color: purple;
-            grid-column: 1 / 4;
+        }
+
+        @media screen and (min-width: 760px) {
+            .grid_container {
+                grid-template: 1fr 1fr 3fr 1fr / 2fr 1fr;
+            }
+
+            header {
+                grid-column: 1 / 3;
+            }
+
+            nav {
+                grid-row: 2 / 3;
+                grid-column: 1 / 3;
+            }
+
+            main {
+                grid-row: 3 / 4;
+                grid-column: 1 / 2;
+            }
+
+            footer {
+                grid-column: 1 / 3;
+            }
+        }
+
+        @media screen and (min-width: 1024px) {
+            .grid_container {
+                grid-template: 1fr 3fr 1fr / 1fr 2fr 1fr;
+            }
+
+            header {
+                grid-column: 1 / 4;
+            }
+
+            nav {
+                grid-row: 2 / 3;
+                grid-column: 1 / 2;
+            }
+
+            main {
+                grid-row: 2 / 3;
+                grid-column: 2 / 3;
+            }
+
+            aside {
+                grid-row: 2 / 3;
+                grid-column: 3 / 4;
+            }
+
+            footer {
+                grid-column: 1 / 4;
+            }
         }
     </style>
 </head>
+
 <body>
     <div class="grid_container">
         <header>Header</header>
@@ -43,4 +96,5 @@
         <footer>Footer</footer>
     </div>
 </body>
+
 </html>
