--- a/staff/marc-salas/layouts/grid.html
+++ b/staff/marc-salas/layouts/grid.html
@@ -37,7 +37,7 @@
         height: 100vh;
         border: 1px solid black;
         display: grid;
-        grid-template-columns: repeat(33%);
+        grid-template-columns: autoº;
         grid-template-rows: 20% 60% 20%;
         grid-template-areas:
             'item1 item1 item1'
@@ -58,11 +58,11 @@
         .container {
             grid-template-rows: 20% 20% 20% 20% 20%;
             grid-template-areas:
-            'item1 item1 item1'
-            'item2 item2 item2'
-            'item3 item3 item3'
-            'item4 item4 item4'
-            'item5 item5 item5';
+            'item1'
+            'item2'
+            'item3'
+            'item4'
+            'item5';
         }
     }
 
