--- a/staff/sofia-costa/layouts/flex.html
+++ b/staff/sofia-costa/layouts/flex.html
@@ -10,8 +10,12 @@
         }
 
         body {
-            height: 100vh;
             border: 2px solid black;
+        }
+
+        .center {
+            display: flex;
+            flex-direction: column;
         }
 
         .area {
@@ -22,48 +26,30 @@
             display: flex;
         }
 
-        .nav,
-        .aside {
-            width: 20%;
+        .header, .nav, .aside, .footer {
+            height: 20vh;
         }
 
         .main {
-            width: 60%;
+            height: 80vh;
         }
 
-
-        @media only screen and (max-width: 600px) {
-
-            .center {
-                display: flex;
-                flex-direction: column;
-            }
-
-            .header,
-            .footer {
-                width: 100%;
-                height: 20vh;
-            }
-
-            .nav,
-            .main,
-            .aside {
-                width: 100%;
-                height: 20vh;
-            }
-        }
 
         @media only screen and (min-width: 768px) {
 
             .tablet {
                 display: flex;
                 flex-direction: row;
-                height: 40vh;
             }
 
-            .main,
-            .aside{
-                width: 50%;
+            .main {
+                width: 70%;
+                height: 60vh;
+            }
+
+            .aside {
+                width: 30%;
+                height: 60vh;
             }
 
             .header, .nav,
@@ -104,6 +90,7 @@
             .main {
                 width: 60vw;
             }
+        }
 
         }
     </style>
