--- a/staff/carlos-matilla/layouts/float.html
+++ b/staff/carlos-matilla/layouts/float.html
@@ -9,16 +9,15 @@
         *{margin: 0;}
         div{border: 5px solid black;
         box-sizing: border-box;}
+      
     </style>
 </head>
 <body>
-    <div style="height: 120px ; width: 100%;" >HEADER</div>
-    
-        <div style="float: left; width: 20%; height: 600px">NAV</div>
-        <div style="float: left; width:  60%; height: 600px">MAIN</div>
-        <div style="float: left; width:  20%; height: 600px">ASIDE</div>
-    
-    <div style="  float: left; width: 100%; height: 120px;">FOOTER</div style="  float: left; width: 33.33%;">
+    <div style="height: 10vh; width: 100%;" >HEADER</div>
+    <div style="float: left; width: 20%; height: 80vh">NAV</div>
+    <div style="float: left; width:  60%; height: 80vh">MAIN</div>
+    <div style="float: left; width:  20%; height: 80vh">ASIDE</div>
+    <div style="  float: left; width: 100%; height: 10vh;">FOOTER</div>
     
 </body>
 </html>
