--- a/staff/carlos-matilla/layouts/ugly-table.html
+++ b/staff/carlos-matilla/layouts/ugly-table.html
@@ -26,15 +26,15 @@
     <table style="width: 100%;" >
         <tbody>
         <tr>
-            <td colspan="3"  style="height: 120px">HEADER</td>
+            <td colspan="3"  style="height: 10vh">HEADER</td>
         </tr>
         <tr>
-        <td style="height: 600px; width: 20%;">NAV</td>
-        <td style="height: 600px; width: 60%;">MAIN</td>
-        <td style="height: 600px; width: 20%;">ASIDE</td>
+        <td style="height: 80vh; width: 20%;">NAV</td>
+        <td style="height: 80vh; width: 60%;">MAIN</td>
+        <td style="height: 80vh; width: 20%;">ASIDE</td>
         </tr>
         <tr>
-            <td colspan="3" style="height: 120px">FOOTER</td>
+            <td colspan="3" style="height: 10vh">FOOTER</td>
         </tr>
         </tbody>
         </table>
