--- a/staff/sofia-costa/layouts/grid.html
+++ b/staff/sofia-costa/layouts/grid.html
@@ -21,22 +21,27 @@
 
             .header {
                 grid-area: h;
+                padding: 8vh 0;
             }
 
             .nav {
                 grid-area: n;
+                padding: 6vh 0;
             }
 
             .main {
                 grid-area: m;
+                padding: 37vh 0;
             }
 
             .aside {
                 grid-area: a;
+                padding: 6vh 0;
             }
 
             .footer {
                 grid-area: f;
+                padding: 8vh 0;
             }
 
             .area {
@@ -56,6 +61,10 @@
                 text-align: center;
                 }
 
+                .aside {
+                    padding: 37vh 0;
+                }
+
             }
 
             @media only screen and (min-width: 1200px) {
@@ -68,6 +77,10 @@
                     grid-template-rows: 20vh 60vh 20vh;
                     grid-template-columns: 20% 30% 30% 20%;
                     text-align: center;
+                }
+
+                .nav, .main, .aside {
+                    padding: 27vh 0;
                 }
 
             }
