added heart modifier

--- a/staff/lisandro-bertoli/templates/instagram/feed.html
+++ b/staff/lisandro-bertoli/templates/instagram/feed.html
@@ -45,7 +45,7 @@
 					</div>
 					<section class="post__comments-area">
 						<section class="post__actions">
-							<div>heart</div>
+							<div class="heart heart--liked">heart</div>
 							<div>comment</div>
 							<div>collection</div>
 						</section>
@@ -54,7 +54,15 @@
 							<p>likes</p>
 						</aside>
 						<section class="post__comments">
-							coments
+							<p>comment</p>
+
+							<p>comment</p>
+
+							<p>comment</p>
+
+							<p>comment</p>
+
+							<p>comment</p>
 						</section>
 					</section>
 				</div>
