--- a/staff/lisandro-bertoli/templates/instagram/style.css
+++ b/staff/lisandro-bertoli/templates/instagram/style.css
@@ -103,6 +103,10 @@ body {
 	height: 20%;
 }
 
+.heart--liked:hover {
+	background-color: red;
+}
+
 .post__actions > div {
 	margin: 5px;
 	border: 1px solid black;
