add sections of insta profile

--- a/staff/lisandro-bertoli/templates/instagram/feed.html
+++ b/staff/lisandro-bertoli/templates/instagram/feed.html
@@ -22,7 +22,7 @@
 			</nav>
 		</header>
 		<main class="feed">
-			<section class="feed__stories">
+			<section class="stories">
 				<ul>
 					<li>imagen</li>
 					<li>imagen</li>
