--- a/staff/bamidele-aighewi/templates/instagram/feed.html
+++ b/staff/bamidele-aighewi/templates/instagram/feed.html
@@ -21,34 +21,73 @@
             navigations
         </div>
     </header>
-    <section class="stories">
-        <div class="stories__story stories__story-active">
-            <div class="story__image"></div>
-        </div>
-        <div class="stories__story stories__story-active">
-            <div class="story__image"></div>
-        </div>
-        <div class="stories__story stories__story-active">
-            <div class="story__image"></div>
-        </div>
-        <div class="stories__story stories__story-active">
-            <div class="story__image"></div>
-        </div>
-        <div class="stories__story">
-            <div class="story__image"></div>
-        </div>
-        <div class="stories__story">
-            <div class="story__image"></div>
-        </div>
-        <div class="stories__story">
-            <div class="story__image"></div>
-        </div>
-        <div class="stories__story">
-            <div class="story__image"></div>
-        </div>
-    </section>
-    <main class="content">
+    
+    <main>
+        <section class="stories">
+            <div class="stories__story stories__story-active">
+                <div class="story__image"></div>
+            </div>
+            <div class="stories__story stories__story-active">
+                <div class="story__image"></div>
+            </div>
+            <div class="stories__story stories__story-active">
+                <div class="story__image"></div>
+            </div>
+            <div class="stories__story stories__story-active">
+                <div class="story__image"></div>
+            </div>
+            <div class="stories__story">
+                <div class="story__image"></div>
+            </div>
+            <div class="stories__story">
+                <div class="story__image"></div>
+            </div>
+            <div class="stories__story">
+                <div class="story__image"></div>
+            </div>
+            <div class="stories__story">
+                <div class="story__image"></div>
+            </div>
+        </section>
 
+        <section class="content">
+            <article class="card">
+                <header class="card__header">
+                    <section class="card__stories stories">
+                        <div class="stories__story stories__story-active">
+                            <div class="story__image"></div>
+                        </div>
+                        <div class="card__userName">seeker</div>
+                    </section>
+                    <div class="card__options"><span>...</span></div>
+                </header>
+                <section class="card__media">
+                    <img src="images/fake-img_smiley.png">
+                </section>
+                <footer class="card__footer">
+                    <section class="card__interactions">
+                        <div class="card__directInteractions"></div>
+                        <div class="card__indirectInteractions"></div>
+                    </section>
+                    <section class="card__interactionsDetails">1.2k likes</section>
+                    <section class="card__details">
+                        <section class="card__captionContainer">
+                            <span class="card__userName">seeker</span> <span class="card__caption">Scientists have identified two cellular pathways that can extend the lifespan of C. elegans, a nematode worm, by 
+                            FIVE TIMES. This increase in lifespan would be the equivalent of a human living for 500 years! C. elegans are commonly 
+                            used as models for aging research, as they contain pathways that are "conserved," meaning that they have been passed 
+                            down to humans through evolution. 📸: Getty Images 
+                        </section>
+                        <section class="card__comments">
+                            <div class="card__caption card__caption-secondary">View all 14 comments</div>
+                            <div class="card__comment">
+                                <span class="card__userName">ericaig1</span>
+                                <span class="card__caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tenetur aliquid veritatis distinctio dignissimos id voluptatem. Neque similique quidem est asperiores esse quae officiis! Aliquam corrupti nulla doloremque minima ipsa.</span>
+                            </div>
+                        </section>
+                    </section>
+                </footer>
+            </article>
+        </section>
     </main>
 </body>
 
