--- a/staff/marc-salas/nike/config.sass
+++ b/staff/marc-salas/nike/config.sass
@@ -2,6 +2,8 @@
     margin: 0
     padding: 0
     font-size: 10px
+h2 
+    font-size: 2.5rem
 
 button,
 input,
@@ -16,7 +18,6 @@ button,
 select,
 [type="button"]
     text-transform: none
-
     border: none
     text-decoration: none
     text-align: center
