results products done

--- a/staff/marc-salas/nike/results.sass
+++ b/staff/marc-salas/nike/results.sass
@@ -1,6 +1,6 @@
+@import results-header
+@import results-products
+    
 .fas 
     font-size: 2rem
 
-.results__header
-    display: flex
-    margin: 10px
