--- a/staff/lisandro-bertoli/templates/nike/results.html
+++ b/staff/lisandro-bertoli/templates/nike/results.html
@@ -26,21 +26,104 @@
 				</nav>
 			</section>
 		</header>
-		<main>
-			<header></header>
-			<aside></aside>
-			<section>
-				<article>
-					<figure>
-						<img src="" alt="" />
+		<main class="main-results">
+			<header class="main-results__header">
+				<section class="main-results__title">
+					<span>Zapatillas / Air Max</span>
+					<h1>Air Max Zapatillas</h1>
+				</section>
+				<nav class="main-results__filters">
+					<button><i class="fas fa-sliders-h"></i></button>
+				</nav>
+			</header>
+			<section class="main-results__products">
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
 						<figcaption>
-							IMG
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
 						</figcaption>
 					</figure>
-					<h5>Nike Air Max 90</h5>
-					<p>Zapatillas - mujer</p>
-					<p>3 colores</p>
-					<p>140 €</p>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
 				</article>
 			</section>
 		</main>
