--- a/staff/lisandro-bertoli/templates/nike/results.html
+++ b/staff/lisandro-bertoli/templates/nike/results.html
@@ -127,22 +127,67 @@
 				</article>
 			</section>
 		</main>
-		<footer>
-			<section></section>
-			<nav>
-				<ul>
-					<li></li>
-					<li></li>
-				</ul>
-			</nav>
-			<nav>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
-			</nav>
+		<footer class="footer">
+			<section class="footer__site-map">
+				<nav class="site-map site-map__suggestions-menu">
+					<ul>
+						<li>TARJETAS DE REGALO</li>
+						<li>TIENDAS MAS CERCANAS</li>
+						<li>REGISTRATE PARA RECIBIR CORREOS ELECTRONICOS</li>
+						<li>HAZTE MIEMBRO</li>
+						<li>DESCUENTO PARA ESTUDIANTES</li>
+						<li>COMENTARIOS SOBRE LA WEB</li>
+					</ul>
+				</nav>
+				<nav class="site-map site-map__help-menu">
+					<h5>OBTENER AYUDA</h5>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</nav>
+				<nav class="site-map site-map__about-menu">
+					<h5>ACERCA DE NIKE</h5>
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</nav>
+				<section class="footer__social-media">
+					<nav>
+						<ul>
+							<li><i class="fab fa-twitter"></i></li>
+							<li><i class="fab fa-facebook"></i></li>
+							<li><i class="fab fa-youtube"></i></li>
+							<li><i class="fab fa-instagram"></i></li>
+						</ul>
+					</nav>
+				</section>
+			</section>
+			<section footer="footer__sub-footer">
+				<small
+					><i class="fas fa-map-marker-alt"></i
+					><span class="footer__country">Espana</span>
+					<p class="footer__copyright">
+						© 2020 Nike, Inc. Todos los derechos reservados
+					</p>
+				</small>
+				<nav class="footer__legal-menu">
+					<ul>
+						<li>Guias</li>
+						<li>Condiciones de uso</li>
+						<li>Condiciones de venta</li>
+						<li>Politica de privacidad y cookies</li>
+						<li>Aviso legal</li>
+						<li>Configuracion de cookies</li>
+					</ul>
+				</nav>
+			</section>
 		</footer>
 	</body>
 	<link
