changed from grid to flex

--- a/staff/lisandro-bertoli/templates/nike/results.sass
+++ b/staff/lisandro-bertoli/templates/nike/results.sass
@@ -20,6 +20,7 @@
         font-size: 1.5rem
         margin-top: 1.5rem
     &__products
-        display: grid
-        grid-template-columns: auto auto
-        justify-content: stretch
+        display: flex
+        width: 100%
+        justify-content: space-between
+        flex-wrap: wrap
