--- a/staff/lisandro-bertoli/templates/nike/config.sass
+++ b/staff/lisandro-bertoli/templates/nike/config.sass
@@ -5,9 +5,9 @@
     font-size: 10px
     list-style: none
 
-body
-    height: 100vh
+html, body
     width: 100vw
+    height: 100vh
 
 button,
 input,
