--- a/staff/lisandro-bertoli/templates/nike/product.sass
+++ b/staff/lisandro-bertoli/templates/nike/product.sass
@@ -1,13 +1,20 @@
 .product
     padding-bottom: 4rem
-    min-width: 18.5rem
+    width: 49.5%
+    display: flex
+    flex-direction: column
+    font-stretch: 100%
     &__img-container > img
         margin-bottom: 1rem
+        width: 100%
 
     &__title
         line-height: 1.8rem
+        font-size: 1.5rem
     &__info
         color: grey
-        line-height: 1.4rem
+        line-height: 1.5rem
+        font-size: 1.5rem
     &__price
         line-height: 1.8rem
+        font-size: 1.5rem
