--- a/staff/lisandro-bertoli/templates/nike/style.css
+++ b/staff/lisandro-bertoli/templates/nike/style.css
@@ -6,9 +6,9 @@
   list-style: none;
 }
 
-body {
-  height: 100vh;
+html, body {
   width: 100vw;
+  height: 100vh;
 }
 
 button,
@@ -53,20 +53,27 @@ select,
 
 .product {
   padding-bottom: 4rem;
-  min-width: 18.5rem;
+  width: 49.5%;
+  display: flex;
+  flex-direction: column;
+  font-stretch: 100%;
 }
 .product__img-container > img {
   margin-bottom: 1rem;
+  width: 100%;
 }
 .product__title {
   line-height: 1.8rem;
+  font-size: 1.5rem;
 }
 .product__info {
   color: grey;
-  line-height: 1.4rem;
+  line-height: 1.5rem;
+  font-size: 1.5rem;
 }
 .product__price {
   line-height: 1.8rem;
+  font-size: 1.5rem;
 }
 
 .main-results {
@@ -90,9 +97,10 @@ select,
   margin-top: 1.5rem;
 }
 .main-results__products {
-  display: grid;
-  grid-template-columns: auto auto;
-  justify-content: stretch;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .footer {
