results static done without reactive

--- a/staff/marc-salas/nike/product.sass
+++ b/staff/marc-salas/nike/product.sass
@@ -1,6 +1,6 @@
 .product
-    height: 37rem
-    width: 18.5rem
+    width: 49.5%
+    margin-bottom: 65px
     &__name
         font-size: 2.5rem
         margin: 5px
@@ -10,3 +10,7 @@
     &__price
         font-size: 2rem
         margin: 5px
+
+.product > img
+    width: 100%
+ 
