--- a/staff/marc-salas/nike/results-products.sass
+++ b/staff/marc-salas/nike/results-products.sass
@@ -1,5 +1,8 @@
 @import product
 
 .results__products
-    display: grid
-    grid-template-columns: auto auto
+    display: flex
+    justify-content: space-between
+    flex-wrap: wrap
+
+    
