--- a/staff/marc-salas/nike/config.sass
+++ b/staff/marc-salas/nike/config.sass
@@ -2,8 +2,12 @@
     margin: 0
     padding: 0
     font-size: 10px
+    list-style: none
 h2 
     font-size: 2.5rem
+html,body
+    height: 100vh
+    width: 100vw
 
 button,
 input,
@@ -22,4 +26,5 @@ select,
     text-decoration: none
     text-align: center
     background-color: transparent
-
+.fas 
+    font-size: 2rem
