--- a/staff/marc-salas/nike/style.css
+++ b/staff/marc-salas/nike/style.css
@@ -2,10 +2,16 @@
   margin: 0;
   padding: 0;
   font-size: 10px;
+  list-style: none;
 }
 
 h2 {
   font-size: 2.5rem;
+}
+
+html, body {
+  height: 100vh;
+  width: 100vw;
 }
 
 button,
@@ -27,6 +33,10 @@ select,
   text-decoration: none;
   text-align: center;
   background-color: transparent;
+}
+
+.fas {
+  font-size: 2rem;
 }
 
 .head {
@@ -61,8 +71,8 @@ select,
 }
 
 .product {
-  height: 37rem;
-  width: 18.5rem;
+  width: 49.5%;
+  margin-bottom: 65px;
 }
 .product__name {
   font-size: 2.5rem;
@@ -77,13 +87,62 @@ select,
   margin: 5px;
 }
 
+.product > img {
+  width: 100%;
+}
+
 .results__products {
-  display: grid;
-  grid-template-columns: auto auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .fas {
   font-size: 2rem;
+}
+
+.footer {
+  color: white;
+  background-color: black;
+  padding: 10px;
+}
+.footer__map, .footer__faqs, .footer__social, .footer__location, .footer__legal {
+  margin: 10px;
+}
+
+.footer__social-media > ul {
+  display: flex;
+  color: grey;
+}
+
+.fab {
+  margin: 5px;
+  font-size: 3rem;
+}
+
+.footer__list {
+  font-size: 100px;
+}
+
+.footer__location {
+  margin: 15px;
+  font-size: 2rem;
+}
+
+.footer__legal > ul > li {
+  margin: 5px;
+  color: grey;
+  font-size: 2rem;
+}
+
+.footer__map > ul > li {
+  margin-top: 10px;
+  font-size: 1.5rem;
+}
+
+.footer__faqs > ul > li {
+  margin-top: 60px;
+  font-size: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
