started making it responsive/adaptive

--- a/staff/lisandro-bertoli/templates/nike/results.html
+++ b/staff/lisandro-bertoli/templates/nike/results.html
@@ -32,11 +32,63 @@
 					<span>Zapatillas / Air Max</span>
 					<h1>Air Max Zapatillas</h1>
 				</section>
-				<nav class="main-results__filters">
+				<nav class="main-results__filter-toggle">
 					<button><i class="fas fa-sliders-h"></i></button>
 				</nav>
 			</header>
+			<section
+				class="main-results__filters-menu main-results__filters-menu--hidden"
+			>
+				<nav class="filters filters__regular">
+					<h4>Tipo de Producto</h4>
+					<ul>
+						<li>Opcion1</li>
+						<li>Opcion2</li>
+						<li>Opcion3</li>
+						<li>Opcion4</li>
+					</ul>
+				</nav>
+				<nav clas="filters filters__color">
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</nav>
+				<nav class="filters filters__regular">
+					<h4>Precio</h4>
+					<ul>
+						<li>Opcion1</li>
+						<li>Opcion2</li>
+						<li>Opcion3</li>
+						<li>Opcion4</li>
+					</ul>
+				</nav>
+				<nav class="filters filters__regular">
+					<h4>Ventajas</h4>
+					<ul>
+						<li>Opcion1</li>
+						<li>Opcion2</li>
+						<li>Opcion3</li>
+						<li>Opcion4</li>
+					</ul>
+				</nav>
+			</section>
 			<section class="main-results__products">
+				<article class="product">
+					<figure class="product__img-container">
+						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
+						<figcaption>
+							<h5 class="product__title">Nike Air Max 90</h5>
+							<p class="product__info">Zapatillas - mujer</p>
+							<p class="product__info">3 colores</p>
+							<p class="product__price">140 €</p>
+						</figcaption>
+					</figure>
+				</article>
 				<article class="product">
 					<figure class="product__img-container">
 						<img src="https://dummyimage.com/185x185/cccccc/fff" alt="" />
