--- a/staff/lisandro-bertoli/templates/nike/results.sass
+++ b/staff/lisandro-bertoli/templates/nike/results.sass
@@ -9,16 +9,19 @@
         display: flex
         justify-content: space-between
         padding: 1.5rem
+
         margin-top: 1.6rem
         margin-bottom: 2rem
+
         width: 100vw
 
     &__title > h1
         font-size: 2.5rem
 
-    &__filters  .fas
+    &__filter-toggle  .fas
         font-size: 1.5rem
         margin-top: 1.5rem
+
     &__products
         display: flex
         width: 100%
