--- a/staff/lisandro-bertoli/templates/nike/product.sass
+++ b/staff/lisandro-bertoli/templates/nike/product.sass
@@ -18,3 +18,7 @@
     &__price
         line-height: 1.8rem
         font-size: 1.5rem
+
+@media only screen and (min-width: 1024px)
+    .product
+        width: 30%
