--- a/staff/lisandro-bertoli/templates/nike/style.css
+++ b/staff/lisandro-bertoli/templates/nike/style.css
@@ -76,6 +76,11 @@ select,
   font-size: 1.5rem;
 }
 
+@media only screen and (min-width: 1024px) {
+  .product {
+    width: 30%;
+  }
+}
 .main-results {
   display: flex;
   flex-direction: column;
@@ -92,7 +97,10 @@ select,
 .main-results__title > h1 {
   font-size: 2.5rem;
 }
-.main-results__filters .fas {
+.main-results__filter-toggle {
+  justify-self: start;
+}
+.main-results__filter-toggle .fas {
   font-size: 1.5rem;
   margin-top: 1.5rem;
 }
@@ -150,6 +158,27 @@ select,
 }
 .site-map__help-menu > h5, .site-map__about-menu > h5 {
   font-size: 1.3rem;
+}
+
+@media only screen and (min-width: 1024px) {
+  .main-results {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+  }
+  .main-results__header {
+    grid-column: 1/span 5;
+    padding-right: 1rem;
+  }
+  .main-results__filter {
+    grid-column: 1/span 1;
+  }
+  .main-results__products {
+    grid-column: 2/span 4;
+  }
+
+  .product {
+    width: 30%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
