--- a/staff/lisandro-bertoli/templates/nike/style.sass
+++ b/staff/lisandro-bertoli/templates/nike/style.sass
@@ -1,6 +1,9 @@
 @import config
-@import button
-@import header
-@import results
-@import footer
+@import ./components/button
+@import ./components/header
+@import ./components/results
+@import ./components/footer
 @import media-queries
+
+body
+    font-family: Arial
